--- a/RegistarPacijenataUWP/MainPage.xaml
+++ b/RegistarPacijenataUWP/MainPage.xaml
@@ -8,6 +8,7 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+        <Button Margin="1783,1020,0,25" Width="100" Height="35">Nastavi</Button>
+        <Button Margin="1665,1019,0,26" Width="100" Height="35">Odustani</Button>
     </Grid>
 </Page>
